# tungsten

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  config.ini  integrator.xml  mainloop.cpp  prepareSystem.py  test.py
cmake_modules/: AddPackageDependency.cmake  FindNetCDF.cmake  FindOpenMM.cmake  FindOpenMP.cmake  ParseLibraryList.cmake  PrintVariable.cmake
data/: config.ini  state.xml  system.xml  test.py
examples/: buildTungstenXML.py  config.ini  integrator.xml  state.xml
include/: MPIReductions.hpp  NetCDFTrajectoryFile.hpp  ParallelKCenters.hpp  ParallelMSM.hpp  aligned_allocator.hpp  assertions.hpp  config.h.in  csparse.h  ini.h  typedefs.hpp  utilities.hpp
include/rmsd/: theobald_rmsd.h
src/: INIReader.cpp  INIReader.cpp.orig  MPIReductions.cpp  NetCDFTrajectoryFile.cpp  NetCDFTrajectoryFile.cpp.orig  ParallelKCenters.cpp  ParallelKCenters.cpp.orig  ParallelMSM.cpp  ParallelMSM.cpp.orig  csparse.c  csparse.c.orig  ini.c  mainloop.cpp  mainloop.cpp.orig  utilities.cpp
src/rmsd/: theobald_rmsd.c
tests/: TestCSparse.cpp  TestReductions.cpp
